2006-07-09  David Kilzer  <ddkilzer@kilzer.net>

        Reviewed by Darin.

        - http://bugzilla.opendarwin.org/show_bug.cgi?id=9812
          LayoutTests/svg/custom/foreign-object-skew.svg seems to be fixed

        * svg/custom/foreign-object-skew-expected.checksum: Updated.
        * svg/custom/foreign-object-skew-expected.png: Updated.

2006-07-09  Darin Adler  <darin@apple.com>

        * fast/dom/delete-contents-expected.txt: Updated results that changed
        because we now keep comment nodes in the DOM.

2006-07-09  David Harrison  <harrison@apple.com>

        Reviewed by John Sullivan.

        <rdar://problem/4598149> Deleting the contents of a DOMRange and then inserting a node into it crashes in WebCore::Font::canUseGlyphCache

        * fast/dom/delete-contents-expected.checksum: Added.
        * fast/dom/delete-contents-expected.png: Added.
        * fast/dom/delete-contents-expected.txt: Added.
        * fast/dom/delete-contents.html: Added.

2006-07-09  David Kilzer  <ddkilzer@kilzer.net>

        Reviewed by Darin.

        - http://bugzilla.opendarwin.org/show_bug.cgi?id=9797
          Make description() in fast/js/resources/js-test-pre.js work with MSIE 6

        * fast/js/resources/js-test-pre.js: Change description() to work with MSIE 6.

2006-07-08  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Maciej.

        Bug 5312: comments aren't available via DOM
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5312

        New tests for DOM comment nodes. Updated results to account for new
        nodes in the DOM (editing offsets changed.)

        * editing/deleting/delete-line-013-expected.txt:
        * editing/deleting/delete-line-014-expected.txt:
        * editing/inserting/insert-3907422-fix-expected.txt:
        * editing/inserting/insert-div-009-expected.txt:
        * editing/inserting/insert-div-010-expected.txt:
        * editing/selection/extend-by-character-006-expected.txt: