@@ -178,7 +178,7 @@ var expectedResultsBeforeGC = [
     1,
     1,
     undefined,
-    undefined,
+    1,
     undefined,
     undefined,
     undefined,
